ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/130_enum_implicit_conversion_is_not_okay_256.sol
contract test {
    enum ActionChoices {
        GoLeft,
        GoRight,
        GoStraight,
        Sit
    }

    constructor() {
        a = ActionChoices.GoStraight;
    }

    u256 a;
}
// ----
// TypeError 7407: (108-132): Type enum test.ActionChoices is not implicitly convertible to expected type u256.
